--- a/4.html
+++ b/4.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Big Corpo Food</title>
-</head>
-<body>
-    <h1></h1>
-</body>
+  </head>
+  <body class="container">
+    <style type="text/css">
+      .img {
+        object-fit: contain;
+      }
+      h1 {
+        text-align: center;
+        font-family: Comic system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+      .title {
+        font-size: xx-large;
+        margin: 50px;
+        padding: 50px;
+      }
+      .responsive{
+        width: 100%;
+        height: auto;
+      }
+    </style>
+    <div class="title">
+      <h1>
+        Perpendiculairement à la transversalité budget l'objectif est de
+        prioriser les cultures risque.
+      </h1>
+    </div>
+    <img src="img-for-4/corporate-4.jpg" class="responsive"/>
+  </body>
 </html>
