--- a/4.html
+++ b/4.html
@@ -10,14 +10,19 @@
       .img {
         object-fit: contain;
       }
-      h1 {
-        text-align: center;
-        font-family: Comic system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      }
       .title {
         font-size: xx-large;
         margin: 50px;
         padding: 50px;
+        text-align: center;
+        font-family: Comic system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+      footer{
+        font-size: xx-large;
+        margin: 50px;
+        padding: 50px;
+        text-align: center;
+        font-family: Comic system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       }
       .responsive{
         width: 100%;
@@ -30,6 +35,9 @@
         prioriser les cultures risque.
       </h1>
     </div>
-    <img src="img-for-4/corporate-4.jpg" class="responsive"/>
+    <img src="img-for-4/corporate-4.jpg" class="responsive">
   </body>
+  <footer>
+    <h1>stupid page made by @ikramiste for bullying purposes</h1>
+  </footer>
 </html>
